# N-Body-Simulation

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FINAL_REPORT.md  GITHUB_SETUP.md  LICENSE  README.md  README_GITHUB.md
.github/: README_TEMPLATE.md
benchmarks/: README.md  benchmark_all.sh  benchmark_and_plot.sh  plot_results.py  run_benchmark.sh  run_benchmarks.sh
benchmarks/results/: benchmark_results.csv
include/: integrator.hpp  io.hpp  nbody_common.hpp  timing.hpp
src/: CMakeLists.txt
src/app/: main.cpp
src/backends/: backend_cuda.cu  backend_omp.cpp  backend_seq.cpp
src/core/: integrator.cpp  io.cpp  timing.cpp
